--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "ts-node ./src/index.ts"
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"npx tsc && node ./dist/index.js\""
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,10 @@
   "dependencies": {
     "@langchain/core": "^0.3.42",
     "@langchain/openai": "^0.4.4",
+    "@zilliz/milvus2-sdk-node": "^2.5.5",
     "dotenv": "^16.4.7",
-    "langchain": "^0.3.19"
+    "langchain": "^0.3.19",
+    "nodemon": "^3.1.9",
+    "ts-apicalypse": "^0.4.2"
   }
 }
